--- a/src/stylesheets/Generator.css
+++ b/src/stylesheets/Generator.css
@@ -2,6 +2,14 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    height: 10vh;
 }
 
 .container{
